fix layout issue on gallery component

--- a/src/assets/styles/components/data.scss
+++ b/src/assets/styles/components/data.scss
@@ -90,10 +90,9 @@
 
 /* Image Gallery */
 .gallery {
+  aspect-ratio: 1/1;
+  min-height: 50vh;
   width: 100%;
-  height: 80vh;
-  border: 1px solid $color-primary;
-  position: relative;
 
   &__picked {
     height: 80%;
@@ -105,14 +104,19 @@
     }
   }
 
+  &__images-container{
+    display: flex;
+    height: 15%;
+    margin-top: 5%;
+    position: relative;
+  }
+
   &__images {
-    height: 20%;
+    cursor: grab;
     display: flex;
     overflow-x: auto;
     overflow-y: hidden;
     scroll-behavior: smooth;
-    border: 1px solid $color-primary;
-    cursor: grab;
 
     img {
       flex: 0 0 auto;
@@ -123,6 +127,10 @@
 
       &:hover {
         border: 1px solid $color-primary;
+      }
+
+      &:last-child {
+        margin-right: 0;
       }
     }
 
@@ -137,9 +145,17 @@
 
   &__btn {
     position: absolute;
-    bottom: 0;
-    margin-bottom: 1.8rem;
     padding: 1rem 0;
+    background-color: lighten($color-primary, 10%);
+    outline: none;
+    border: none;
+    color: $color-nav;
+    top: 50%;
+    transform: translateY(-50%);
+
+    &:hover {
+      background-color: lighten($color-primary, 10%);
+    }
   }
 
   &__btn-prev {
